tests/ui/proc-macro/issue-107113-wrap.stderr
error[E0308]: mismatched types
  --> $DIR/issue-107113-wrap.rs:8:1
   |
LL | #[issue_107113::main]
   | ^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected `Result<(), Error>`, found `()`
   | expected `Result<(), std::io::Error>` because of return type
   |
   = note:   expected enum `Result<(), std::io::Error>`
           found unit type `()`
   = note: this error originates in the attribute macro `issue_107113::main` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
